Add test of live region at page load with longer timeout for iOS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	</head>
 	<body>
 		<h1>jscholes.github.io</h1>
-		<a href="https://jscholes.github.io/aria-live-onload.html">Test: ARIA Live Region on Page Load</a>
+		<ul style="list-style: none;">
+			<li>
+				<a href="https://jscholes.github.io/aria-live-onload.html">Test: ARIA Live Region on Page Load</a>
+			</li>
+			<li>
+				<a href="https://jscholes.github.io/aria-live-onload-longer-timeout.html">Test: ARIA Live Region on Page Load with Longer Timeout</a>
+			</li>
+		</ul>
 	</body>
 </html>
