Add live region samples with 500ms and 700ms timeouts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 				<a href="https://jscholes.github.io/aria-live-onload.html">Test: ARIA Live Region on Page Load</a>
 			</li>
 			<li>
-				<a href="https://jscholes.github.io/aria-live-onload-longer-timeout.html">Test: ARIA Live Region on Page Load with Longer Timeout</a>
+				<a href="https://jscholes.github.io/aria-live-onload-500.html">Test: ARIA Live Region on Page Load with 500ms timeout</a>
+			</li>
+			<li>
+				<a href="https://jscholes.github.io/aria-live-onload-700.html">Test: ARIA Live Region on Page Load with 700ms timeout</a>
+			</li>
+			<li>
+				<a href="https://jscholes.github.io/aria-live-onload-longer-timeout.html">Test: ARIA Live Region on Page Load with 2000ms Timeout</a>
 			</li>
 		</ul>
 	</body>
