Remove stray closing </div> tag

--- a/aria-live-onload.html
+++ b/aria-live-onload.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>ARIA Live Region on Page Load</h1>
-		<div id="error-container" aria-live="assertive" aria-atomic="true"></div></div>
+		<div id="error-container" aria-live="assertive" aria-atomic="true"></div>
 		<script>
 			let errorHeadingText = 'Login failed:';
 			let errorMsgText = `Your email or password is incorrect. Please try again, <a href="../account/login?forgot=true">reset your password</a>, or <a href="../account/create">register for a new account.</a>`;
