--- a/modal.html
+++ b/modal.html
@@ -8,7 +8,7 @@
 	<body>
 		<main>
 		<button id="modal-trigger" onclick="launchModal()">Launch the Modal</button>
-		<div id="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" style="display: none">
+		<div id="modal" role="dialog" aria-modal="true" aria-label="Loading..." style="display: none">
 			<h1 id="modal-title" tabindex="-1">Loading...</h1>
 			<p id="loading-msg">Please wait...</p>
 			<p id="loaded-msg" style="display: none">The dialog has now loaded!</p>
@@ -24,12 +24,14 @@
 			}
 
 			function loadModalContent() {
+				document.getElementById("modal").setAttribute("aria-label", "Loaded");
 				document.getElementById("modal-title").textContent = "Loaded";
 				document.getElementById("loaded-msg").style.display = "block";
 				document.getElementById("loading-msg").style.display = "none";
 			}
 
 			function closeModal() {
+				document.getElementById("modal").setAttribute("aria-label", "Loading...");
 				document.getElementById("modal-trigger").focus();
 				document.getElementById("modal").style.display = "none";
 				document.getElementById("modal-title").textContent = "Loading...";
