--- a/modal.html
+++ b/modal.html
@@ -7,9 +7,10 @@
 	</head>
 	<body>
 		<main>
+		<p>Revision: 31314</p>
 		<button id="modal-trigger" onclick="launchModal()">Launch the Modal</button>
 		<div id="modal" role="dialog" aria-modal="true" aria-label="Loading..." style="display: none">
-			<h1 id="modal-title" tabindex="-1">Loading...</h1>
+			<h1 id="modal-title" tabindex="-1" aria-live="polite" aria-atomic="true">Loading...</h1>
 			<p id="loading-msg">Please wait...</p>
 			<p id="loaded-msg" style="display: none">The dialog has now loaded!</p>
 			<button onclick="closeModal()">Close</button>
@@ -20,7 +21,7 @@
 				document.getElementById("modal").style.display = "block";
 				document.getElementById('modal-title').focus();
 				document.getElementById("loading-msg").style.display = "block";
-				window.setTimeout(loadModalContent, 1000);
+				window.setTimeout(loadModalContent, 500);
 			}
 
 			function loadModalContent() {
