Click text field on focus, to try to show iOS keyboard

--- a/keyboardfocus.html
+++ b/keyboardfocus.html
@@ -15,6 +15,7 @@
 		<script>
 			window.setTimeout(() => {
 				document.getElementById('txt').focus();
+				document.getElementById('txt').click();
 			}, 2000);
 		</script>
 	</body>
