Update mark-up pattern in multiple spans sample

--- a/multiplespans.html
+++ b/multiplespans.html
@@ -7,10 +7,12 @@
 	<body>
 		<h1>Multiple Spans Inside Interactive Control</h1>
 		<button>
-			<span>Delete<span>&nbsp;Screenshot.jpg</span></span>
+			<span>Delete</span>
+			<span>&nbsp;Screenshot.jpg</span>
 		</button>
 		<a href="javascript:void(0);">
-			<span>Download<span>&nbsp;screenshot.jpg</span></span>
+			<span>Download</span>
+			<span>&nbsp;screenshot.jpg</span>
 		</a>
 	</body>
 </html>
