Fix table mark-up and add plain text example to multiple spans sample

--- a/multiplespans.html
+++ b/multiplespans.html
@@ -32,11 +32,12 @@
 		<a href="javascript:void(0);">
 			View 2019 Q4 Report<span>, opens in new window</span>
 		</a>
+		<h2>In Table Headers</h2>
 		<table>
 			<thead>
 				<tr>
-					<th scope="col">Su<span class="sr-only">nday</span>
-					<th scope="col">Mo<span class="sr-only">nday</span>
+					<th scope="col">Su<span class="sr-only">nday</span></th>
+					<th scope="col">Mo<span class="sr-only">nday</span></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -46,5 +47,7 @@
 				</tr>
 			</tbody>
 		</table>
+		<h2>In a Paragraph</h2>
+		<p>The report for Q4 2018 was released on <span>January 28, 2019</span>.</p>
 	</body>
 </html>
