Rename and update multiple spans sample based on observed behaviour

--- a/childspans.html
+++ b/childspans.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Multiple Spans Inside Interactive Control</title>
+		<title>Child Spans Inside Non-Interactive Elements</title>
 		<style type="text/css">
 			.sr-only {
 				border: 0 !important;
@@ -20,18 +20,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>Multiple Spans Inside Interactive Control</h1>
-		<button>
-			<span>Delete</span>
-			<span>&nbsp;Screenshot.jpg</span>
-		</button>
-		<a href="javascript:void(0);">
-			<span>Download</span>
-			<span>&nbsp;screenshot.jpg</span>
-		</a>
-		<a href="javascript:void(0);">
-			View 2019 Q4 Report<span>, opens in new window</span>
-		</a>
+		<h1>Child Spans Inside Non-Interactive Elements</h1>
 		<h2>In Table Headers</h2>
 		<table>
 			<thead>
