--- a/combobox.html
+++ b/combobox.html
@@ -22,7 +22,7 @@
 			</label>
 			<ul role="listbox" id="list-id" hidden>
 				<li id="baymax" role="option">Baymax</li>
-				<li id="bb-8" role="option" aria-disabled="true"><del>BB-8</del></li>
+				<li id="bb-8" role="option"><del>BB-8</del></li>
 				<li id="hubot" role="option">Hubot</li>
 				<li id="r2-d2" role="option">R2-D2</li>
 				<li role="presentation"><a id="wall-e" href="#wall-e" role="option">Wall-E</a></li>
