More combo box hacking

--- a/combobox.html
+++ b/combobox.html
@@ -21,11 +21,10 @@
 				<input aria-controls="list-id" role="combobox" type="text">
 			</label>
 			<ul role="listbox" id="list-id" hidden>
-				<li id="baymax" role="option">Baymax</li>
-				<li id="bb-8" role="option"><del>BB-8</del></li>
-				<li id="hubot" role="option">Hubot</li>
-				<li id="r2-d2" role="option">R2-D2</li>
-				<li role="presentation"><a id="wall-e" href="#wall-e" role="option">Wall-E</a></li>
+				<li id="baymax" role="option" aria-checked="false">Baymax</li>
+				<li id="bb-8" role="option" aria-checked="false"><del>BB-8</del></li>
+				<li id="hubot" role="option" aria-checked="false">Hubot</li>
+				<li id="r2-d2" role="option" aria-checked="false">R2-D2</li>
 			</ul>
 		</form>
 		<pre class="events" aria-live="assertive"></pre>
