--- a/aria-live-focus.html
+++ b/aria-live-focus.html
@@ -8,19 +8,19 @@
 		<h1>ARIA Live Regions and Focus Changes</h1>
 		<h2 id="btns">Buttons</h2>
 		<ul aria-labelledby="btns" style="list-style: none;">
-			<li><button>Item 1</button></li>
-			<li><button>Item 2</button></li>
-			<li><button>Item 3</button></li>
+			<li><button aria-current="true">Item 1</button></li>
+			<li><button aria-current="false">Item 2</button></li>
+			<li><button aria-current="false">Item 3</button></li>
 		</ul>
 		<section aria-labelledby="heading">
-			<h2 id="heading" tabindex="-1">New Place</h2>
+			<h2 id="heading" tabindex="-1">Item 1</h2>
 			<p>This is a new region.</p>
 		</section>
 		<div aria-live="polite" aria-atomic="true"></div>
 
 		<script>
 			function onPress(e) {
-				document.querySelectorAll('button').forEach(btn => btn.setAttribute('aria-current', 'false'));
+				document.querySelector('button[aria-current="true"]').setAttribute('aria-current', 'false');
 				e.target.setAttribute('aria-current', 'true');
 				let heading = document.querySelector('#heading');
 				heading.innerText = e.target.innerText;
