--- a/headinglevelstart.html
+++ b/headinglevelstart.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Heading Level Start</title>
-		<script src="https://unpkg.com/headinglevelstart-polyfill@latest/index.js">
+		<script src="https://unpkg.com/headinglevelstart-polyfill@latest/index.js"></script>
 	</head>
 	<body>
 		<h1>Heading Level Start</h1>
