--- a/headinglevelstart.html
+++ b/headinglevelstart.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Heading Level Start</h1>
-		<p>This page is a test of [muan/headinglevelstart-polyfill](https://github.com/muan/headinglevelstart-polyfill).</p>
+		<p>This page is a test of <a href="https://github.com/muan/headinglevelstart-polyfill">muan/headinglevelstart-polyfill</a>.</p>
 		<h2>Latest Posts</h2>
 		<div headinglevelstart="3">
 			<section aria-labelledby="post1">
